# grapik-quran

./: .gitignore  README.md  meson.build  org.grapik.Quran.json  org.naruaika.Quran.json  pypi-dependencies.json
data/: meson.build  org.grapik.Quran.appdata.xml.in  org.grapik.Quran.desktop.in  org.grapik.Quran.gschema.xml  org.naruaika.Quran.appdata.xml.in  org.naruaika.Quran.desktop.in  org.naruaika.Quran.gschema.xml
po/: POTFILES  meson.build
src/: about.py  animation.py  bookmark.py  constants.py  dialog.py  globals.py  grapik-quran.in  grapik_quran.gresource.xml  headerbar.py  listofcontents.py  main.db  main.py  menu.py  meson.build  message.py  model.py  musshaf.py  navigation.py  popover.py  process.py  revealer.py  search.py  tarajem.py  telaawa.py  widget.py  window.py  window.ui
src/css/: colour.css  global.css  main-dark.css  main.css
src/db/: lafzi_postlist.txt  lafzi_termlist.txt  main.db
src/res/css/: main.css
src/res/db/: main.db  map.xml  pages.db  translations.db
src/res/ui/: about.ui  main-menu.ui  message.ui  musshaf.ui  navigation.ui  tarajem.ui  telaawa.ui  translation.ui  window.ui
src/res/ui/dialog/: about.ui
src/res/ui/popover/: menu.ui  navigation.ui  translation.ui
src/ui/: about_dialog.ui  bookmark_popover.ui  headerbar.ui  headerbar_hdy.ui  listofcontents_popover.ui  menu.ui  musshaf_dialog.ui  musshaf_listboxrow.ui  musshaf_viewer.ui  navigation.ui  search_listboxrow.ui  search_popover.ui  tarajem_listboxrow.ui  tarajem_popover.ui  tarajem_viewer.ui  telaawa_listboxrow.ui  telaawa_popover.ui  window.ui  window_hdy.ui
src/widget/: dialog.py  popover.py
